# franking

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
franking/: api.py  internetmarke.py  main.py  models.py  printer.py
templates/: base.html  index.html  orders.html
templates/partials/: balance.html  buttons.html
